--- a/client/src/components/CreateProduct/CreateProduct.scss
+++ b/client/src/components/CreateProduct/CreateProduct.scss
@@ -1,139 +1,136 @@
 .create-product {
-  position: relative;
+	position: relative;
 
-  .alert-create-msg {
-    border: 1px solid #c0c0c0;
-    color: green;
-    padding: 10px;
-    width: fit-content;
-    margin: 10px auto 20px;
-  }
+	form {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: 30px;
+		padding: 20px;
+		background-color: var(--bodyWhite);
+		border-radius: 20px;
+		box-shadow: var(--boxShadow);
 
-  form {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+		.error {
+			color: var(--redColor);
+			background-color: transparent;
+			text-transform: lowercase;
+			width: fit-content;
+			margin: auto;
+			padding: 0;
+		}
 
-    .form-content {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 30px;
-      @media (max-width: 991px) {
-        flex-direction: column-reverse;
-      }
+		.col-1 {
+			flex: 1;
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+			.input-box {
+				label {
+					display: flex;
+					align-items: center;
+					span {
+						width: 100px;
+						color: var(--textSecondColor);
+						font-weight: bold;
+					}
+					input,
+					textarea {
+						flex: 1;
+						padding: 7px 10px;
+						background-color: var(--bodyColor);
+						border: none;
+						transition: all 0.3s;
+						border-radius: 5px;
+						border: var(--border);
+						&:focus {
+							outline: none;
+							padding-left: 13px;
+							&::placeholder {
+								transition: all 0.3s;
+								color: transparent;
+							}
+						}
+					}
+					textarea {
+						resize: none;
+						height: 150px;
+					}
+				}
+			}
+			button.submit {
+				background: var(--redColor);
+				width: 100%;
+				color: var(--textColor);
+				border: none;
+				border-radius: 10px;
+				padding: 10px 20px;
+				font-weight: bold;
+				font-size: 20px;
+				text-transform: capitalize;
+				cursor: pointer;
+				opacity: 0.9;
+				transition: 0.3s;
+				&:hover {
+					opacity: 1;
+				}
+			}
+		}
+		.col-2 {
+			width: 30%;
+			text-align: center;
 
-      .error {
-        color: rgb(221, 54, 54);
-        text-transform: lowercase;
-        float: right;
-      }
-      .col-1 {
-        width: 50%;
-        text-align: center;
-        @media (max-width: 991px) {
-          width: 100%;
-        }
-        .input-box {
-          margin: 0 auto 20px;
-          width: 400px;
-          .input-content {
-            margin: auto;
-            display: flex;
-            justify-content: space-between;
-            @media (max-width: 991px) {
-              flex-direction: column;
-            }
-            label {
-              font-weight: bold;
-              text-align: left;
-            }
-            .input {
-              // width: fit-content;
-              display: flex;
-              flex-direction: column;
-            }
-            textarea {
-              height: 100px;
-              resize: none;
-            }
-            input,
-            textarea {
-              margin: auto;
-              width: 100%;
-              padding: 10px;
-              border: none;
-              box-shadow: 2px 2px 2px #c0c0c0;
-              transition: 0.3s;
-              @media (min-width: 991px) {
-                width: 300px;
-              }
-              &:focus {
-                outline: none;
-                border: none;
-                box-shadow: 2px 2px 10px #c0c0c0;
-                caret-color: orangered;
-                padding-left: 15px;
-                &::placeholder {
-                  color: transparent;
-                }
-              }
-            }
-          }
-        }
-        .submit {
-          border: none;
-          width: 300px;
-          margin: auto;
-          text-align: center;
-          // float: right;
-          text-transform: uppercase;
-          background-color: #333;
-          color: white;
-          padding: 15px;
-          margin: 0 auto 20px;
-          cursor: pointer;
-          border-radius: 5px;
-          @media (max-width: 991px) {
-            float: none;
-          }
-        }
-      }
-      .col-2 {
-        width: 50%;
-        text-align: center;
-        @media (max-width: 991px) {
-          width: 100%;
-        }
-        input {
-          display: none;
-        }
-        button {
-          border: none;
-          width: 120px;
-          background-color: #333;
-          color: white;
-          padding: 15px;
-          margin: 0 auto 20px;
-          cursor: pointer;
-          border-radius: 5px;
-        }
-        .img-error {
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
-          img {
-            width: 200px;
-            height: 200px;
-            border: 1px solid #c0c0c0;
-            border-radius: 50%;
-            box-shadow: 2px 2px 5px #c0c0c0;
-            object-fit: contain;
-            cursor: pointer;
-            margin: auto;
-          }
-        }
-      }
-    }
-  }
+			input {
+				display: none;
+			}
+			.img-error {
+				display: flex;
+				flex-direction: column;
+				gap: 20px;
+				position: relative;
+				.camera {
+					position: absolute;
+					left: 50%;
+					transform: translateX(-50%);
+					font-size: 25px;
+					color: var(--redColor);
+					top: -12px;
+					cursor: pointer;
+				}
+				img {
+					width: 200px;
+					height: 200px;
+					border: 1px solid #c0c0c0;
+					border-radius: 50%;
+					box-shadow: 2px 2px 5px #c0c0c0;
+					object-fit: contain;
+					margin: auto;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 767px) {
+	.create-product {
+		form {
+			margin-top: 10px;
+			margin-bottom: 10px;
+			position: relative;
+			top: auto;
+			left: auto;
+			transform: translate(0, 0);
+			flex-direction: column-reverse;
+			.col-1 {
+				width: 90%;
+			}
+			.col-2 {
+				width: 90%;
+			}
+		}
+	}
 }
