--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -10,6 +10,9 @@
 		border-radius: 10px;
 		text-align: center;
 		transition: 0.3s;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 		&:hover {
 			box-shadow: 0px 1px 15px rgb(3 0 71 / 9%);
 		}
@@ -17,6 +20,7 @@
 		img {
 			width: 200px;
 			max-width: 100%;
+			margin: auto;
 			cursor: pointer;
 			padding: var(--padding);
 		}
