--- a/client/src/css/CreateProduct/CreateProduct.css
+++ b/client/src/css/CreateProduct/CreateProduct.css
@@ -1,148 +1,130 @@
 .create-product {
   position: relative;
 }
-.create-product .alert-create-msg {
-  border: 1px solid #c0c0c0;
-  color: green;
-  padding: 10px;
-  width: fit-content;
-  margin: 10px auto 20px;
-}
 .create-product form {
-  position: relative;
+  position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-}
-.create-product form .form-content {
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px;
+  gap: 30px;
+  padding: 20px;
+  background-color: var(--bodyWhite);
+  border-radius: 20px;
+  box-shadow: var(--boxShadow);
 }
-@media (max-width: 991px) {
-  .create-product form .form-content {
-    flex-direction: column-reverse;
-  }
-}
-.create-product form .form-content .error {
-  color: #dd3636;
+.create-product form .error {
+  color: var(--redColor);
+  background-color: transparent;
   text-transform: lowercase;
-  float: right;
-}
-.create-product form .form-content .col-1 {
-  width: 50%;
-  text-align: center;
-}
-@media (max-width: 991px) {
-  .create-product form .form-content .col-1 {
-    width: 100%;
-  }
-}
-.create-product form .form-content .col-1 .input-box {
-  margin: 0 auto 20px;
-  width: 400px;
-}
-.create-product form .form-content .col-1 .input-box .input-content {
+  width: fit-content;
   margin: auto;
-  display: flex;
-  justify-content: space-between;
+  padding: 0;
 }
-@media (max-width: 991px) {
-  .create-product form .form-content .col-1 .input-box .input-content {
-    flex-direction: column;
-  }
-}
-.create-product form .form-content .col-1 .input-box .input-content label {
-  font-weight: bold;
-  text-align: left;
-}
-.create-product form .form-content .col-1 .input-box .input-content .input {
+.create-product form .col-1 {
+  flex: 1;
   display: flex;
   flex-direction: column;
+  gap: 10px;
 }
-.create-product form .form-content .col-1 .input-box .input-content textarea {
-  height: 100px;
-  resize: none;
+.create-product form .col-1 .input-box label {
+  display: flex;
+  align-items: center;
 }
-.create-product form .form-content .col-1 .input-box .input-content input,
-.create-product form .form-content .col-1 .input-box .input-content textarea {
-  margin: auto;
-  width: 100%;
-  padding: 10px;
+.create-product form .col-1 .input-box label span {
+  width: 100px;
+  color: var(--textSecondColor);
+  font-weight: bold;
+}
+.create-product form .col-1 .input-box label input,
+.create-product form .col-1 .input-box label textarea {
+  flex: 1;
+  padding: 7px 10px;
+  background-color: var(--bodyColor);
   border: none;
-  box-shadow: 2px 2px 2px #c0c0c0;
-  transition: 0.3s;
+  transition: all 0.3s;
+  border-radius: 5px;
+  border: var(--border);
 }
-@media (min-width: 991px) {
-  .create-product form .form-content .col-1 .input-box .input-content input,
-.create-product form .form-content .col-1 .input-box .input-content textarea {
-    width: 300px;
-  }
-}
-.create-product form .form-content .col-1 .input-box .input-content input:focus,
-.create-product form .form-content .col-1 .input-box .input-content textarea:focus {
+.create-product form .col-1 .input-box label input:focus,
+.create-product form .col-1 .input-box label textarea:focus {
   outline: none;
-  border: none;
-  box-shadow: 2px 2px 10px #c0c0c0;
-  caret-color: orangered;
-  padding-left: 15px;
+  padding-left: 13px;
 }
-.create-product form .form-content .col-1 .input-box .input-content input:focus::placeholder,
-.create-product form .form-content .col-1 .input-box .input-content textarea:focus::placeholder {
+.create-product form .col-1 .input-box label input:focus::placeholder,
+.create-product form .col-1 .input-box label textarea:focus::placeholder {
+  transition: all 0.3s;
   color: transparent;
 }
-.create-product form .form-content .col-1 .submit {
+.create-product form .col-1 .input-box label textarea {
+  resize: none;
+  height: 150px;
+}
+.create-product form .col-1 button.submit {
+  background: var(--redColor);
+  width: 100%;
+  color: var(--textColor);
   border: none;
-  width: 300px;
-  margin: auto;
-  text-align: center;
-  text-transform: uppercase;
-  background-color: #333;
-  color: white;
-  padding: 15px;
-  margin: 0 auto 20px;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-weight: bold;
+  font-size: 20px;
+  text-transform: capitalize;
   cursor: pointer;
-  border-radius: 5px;
+  opacity: 0.9;
+  transition: 0.3s;
 }
-@media (max-width: 991px) {
-  .create-product form .form-content .col-1 .submit {
-    float: none;
-  }
+.create-product form .col-1 button.submit:hover {
+  opacity: 1;
 }
-.create-product form .form-content .col-2 {
-  width: 50%;
+.create-product form .col-2 {
+  width: 30%;
   text-align: center;
 }
-@media (max-width: 991px) {
-  .create-product form .form-content .col-2 {
-    width: 100%;
-  }
-}
-.create-product form .form-content .col-2 input {
+.create-product form .col-2 input {
   display: none;
 }
-.create-product form .form-content .col-2 button {
-  border: none;
-  width: 120px;
-  background-color: #333;
-  color: white;
-  padding: 15px;
-  margin: 0 auto 20px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-.create-product form .form-content .col-2 .img-error {
+.create-product form .col-2 .img-error {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  position: relative;
 }
-.create-product form .form-content .col-2 .img-error img {
+.create-product form .col-2 .img-error .camera {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 25px;
+  color: var(--redColor);
+  top: -12px;
+  cursor: pointer;
+}
+.create-product form .col-2 .img-error img {
   width: 200px;
   height: 200px;
   border: 1px solid #c0c0c0;
   border-radius: 50%;
   box-shadow: 2px 2px 5px #c0c0c0;
   object-fit: contain;
-  cursor: pointer;
   margin: auto;
+}
+
+@media (max-width: 767px) {
+  .create-product form {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    position: relative;
+    top: auto;
+    left: auto;
+    transform: translate(0, 0);
+    flex-direction: column-reverse;
+  }
+  .create-product form .col-1 {
+    width: 90%;
+  }
+  .create-product form .col-2 {
+    width: 90%;
+  }
 }
