--- a/client/src/css/Orders/Orders.css
+++ b/client/src/css/Orders/Orders.css
@@ -1,128 +1,98 @@
 .orders {
-  margin: 20px auto;
+  width: 80%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.orders .heading {
+  display: flex;
+  margin-bottom: 20px;
+  color: var(--textSecondColor);
+  font-size: 20px;
+}
+.orders .heading .head-item {
+  width: 25%;
+  padding: var(--padding) 20px;
+  text-align: center;
+}
+.orders .order-information .main-order {
+  display: flex;
+  align-items: center;
+  background-color: var(--bodyWhite);
+  box-shadow: var(--boxShadow);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.orders .order-information .main-order > div {
+  width: 25%;
+  padding: 20px;
+  font-size: 17px;
+  text-align: center;
+}
+.orders .order-information .main-order > div.edit-arrow svg {
+  color: var(--redColor);
+  transition: all 0.3s;
+  transform: rotate(90deg);
+}
+.orders .order-information .main-order > div svg {
+  font-size: 20px;
+  transition: all 0.3s;
+}
+.orders .order-information .main-order > div.show-more, .orders .order-information .main-order > div.delete {
+  cursor: pointer;
+}
+.orders .order-information .main-order > div.show-more:hover svg, .orders .order-information .main-order > div.delete:hover svg {
+  fill: var(--redColor);
+}
+.orders .order-information .order-details {
+  transition: height 0.4s, opacity 0.4s;
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+.orders .order-information .order-details.show {
+  opacity: 1;
+  background-color: var(--bodyWhite);
+  box-shadow: var(--boxShadow);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.orders .order-information .order-details .order-items {
+  padding: var(--padding);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.orders .order-information .order-details .order-items .order-item {
+  background: var(--bodyColor);
+  box-shadow: var(--boxShadow);
+  padding: 5px;
+  display: flex;
+  align-items: center;
+}
+.orders .order-information .order-details .order-items .order-item > div {
+  width: 25%;
+  text-align: center;
+}
+.orders .order-information .order-details .order-items .order-item .img-item img {
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+}
+.orders .order-information .order-details .order-items .order-item .delete {
+  cursor: pointer;
+}
+.orders .order-information .order-details .order-items .order-item .delete span {
+  color: var(--textColor);
+  background-color: var(--redColor);
+  padding: 5px;
+  width: 50%;
+}
+.orders .order-information .order-details .order-items .order-item .quantity span {
+  border: 1px solid var(--redColor);
+  padding: 3px 5px;
 }
 .orders .no-orders-msg {
   text-align: center;
   color: var(--mainColor);
-}
-.orders .alert-delete-msg {
-  border: 1px solid #c0c0c0;
-  color: green;
-  padding: 10px;
-  width: fit-content;
-  margin: 10px auto 20px;
-}
-.orders table {
-  width: 100%;
-  border-collapse: collapse;
-  box-shadow: 2px 2px 5px #333;
-  overflow: scroll;
-}
-.orders table thead {
-  background-color: var(--mainColor);
-  color: #fff;
-}
-.orders table thead th {
-  text-align: center;
-  font-weight: bold;
-  text-transform: uppercase;
-  padding: 10px;
-}
-.orders table tbody {
-  width: 100%;
-}
-.orders table tbody tr {
-  width: 100%;
-  padding: 10px;
-}
-.orders table tbody tr:nth-child(odd) {
-  background-color: #e2e2e26c;
-}
-.orders table tbody tr td {
-  text-align: left;
-  padding: 5px;
-}
-.orders table tbody tr td.number-order {
-  text-align: center;
-  font-size: 20px;
-}
-.orders table tbody tr td.details {
-  width: 500px;
-}
-.orders table tbody tr td.details span {
-  display: flex;
-  flex-wrap: wrap;
-}
-.orders table tbody tr td.details span div {
-  width: fit-content;
-  display: flex;
-  border: 1px solid #c0c0c0;
-  color: #333;
-  box-shadow: 2px 2px 5px #c0c0c0;
-  margin: 2px;
-  padding: 10px;
-  text-align: center;
-}
-.orders table tbody tr td.show-more-order, .orders table tbody tr td.price, .orders table tbody tr td.delete-order {
-  text-align: center;
-  width: 200px;
-}
-.orders table tbody tr td.show-more-order button, .orders table tbody tr td.price button, .orders table tbody tr td.delete-order button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  background-color: transparent;
-  border: none;
-  color: var(--mainColor);
-  font-size: 30px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.orders table tbody tr td.show-more-order button:focus, .orders table tbody tr td.price button:focus, .orders table tbody tr td.delete-order button:focus {
-  transform: scale(0.91);
-}
-.orders table tbody tr td.show-more-order button:hover {
-  transform: scale(1.05);
-  color: #313191;
-}
-.orders table tbody tr td.edit-order button:hover {
-  transform: scale(1.05);
-  color: #06cc06;
-}
-.orders table tbody tr td.delete-order button:hover {
-  transform: scale(1.05);
-  color: red;
-}
-
-.order-show-more-modal {
-  position: relative;
-  background-color: white;
-  z-index: 1111;
-  width: 80%;
-  border: 2px solid var(--mainColor);
-  margin: 20px auto;
-  padding: 20px;
-  display: flex;
-  gap: 20px;
-  justify-content: space-between;
-}
-@media (max-width: 991px) {
-  .order-show-more-modal {
-    width: 99%;
-  }
-}
-.order-show-more-modal .order-information {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
-.order-show-more-modal .order-information .product-item {
-  width: 150px;
-  text-align: center;
-  border: 1px solid #c0c0c0;
-}
-.order-show-more-modal .order-information .product-item img {
-  width: 100px;
 }
