--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -11,6 +11,9 @@
   border-radius: 10px;
   text-align: center;
   transition: 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .products-wrapper .product-item:hover {
   box-shadow: 0px 1px 15px rgba(3, 0, 71, 0.09);
@@ -18,6 +21,7 @@
 .products-wrapper .product-item img {
   width: 200px;
   max-width: 100%;
+  margin: auto;
   cursor: pointer;
   padding: var(--padding);
 }
