--- a/client/src/components/CreateProduct/CreateProduct.scss
+++ b/client/src/components/CreateProduct/CreateProduct.scss
@@ -1,11 +1,11 @@
 .create-product {
 	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 10px;
 
 	form {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
@@ -59,6 +59,71 @@
 					textarea {
 						resize: none;
 						height: 150px;
+					}
+				}
+			}
+			.multi-select-size {
+				width: 100%;
+			}
+			.colors {
+				.colors-config {
+					display: flex;
+					align-items: center;
+					flex-wrap: wrap;
+					gap: 20px;
+					input[type='color'] {
+						-webkit-appearance: none;
+						border: 1px solid #c0c0c0;
+						overflow: hidden;
+						width: 50px;
+						height: 50px;
+						border-radius: 50%;
+						cursor: pointer;
+						&::-webkit-color-swatch-wrapper {
+							padding: 0;
+						}
+						&::-webkit-color-swatch {
+							border: none;
+						}
+					}
+					button {
+						padding: 10px;
+						border: none;
+						color: var(--textSecondColor);
+						border: 1px solid var(--redColor);
+						background-color: var(--bodyWhite);
+						border-radius: 5px;
+						transition: all 0.3s;
+						&:hover {
+							background-color: var(--redColor);
+							color: var(--textColor);
+						}
+					}
+					.display-colors {
+						display: flex;
+						justify-content: center;
+						gap: 10px;
+						> div {
+							position: relative;
+							display: inline-flex;
+							justify-content: center;
+							align-items: center;
+							width: 30px;
+							height: 30px;
+							border-radius: 50%;
+							cursor: pointer;
+							svg {
+								opacity: 0;
+								transition: all 0.3s;
+							}
+							&:hover {
+								svg {
+									opacity: 1;
+									cursor: pointer;
+									color: black;
+								}
+							}
+						}
 					}
 				}
 			}
