--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -4,7 +4,7 @@
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 	gap: 15px;
 	.product-item {
-		background-color: #fff;
+		background-color: var(--bodyWhite);
 		box-shadow: 0px 1px 3px rgb(3 0 71 / 9%);
 		overflow: hidden;
 		border-radius: 10px;
@@ -50,112 +50,6 @@
 						transform: scale(0.93);
 					}
 				}
-			}
-		}
-	}
-}
-
-.product-modal {
-	.close-icon {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		border: 1px solid #c0c0c0;
-		border-radius: 4px;
-		padding: 0 10px;
-		color: var(--mainColor);
-		font-size: 17px;
-		font-weight: bold;
-		cursor: pointer;
-	}
-	.main-content {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		gap: 50px;
-
-		.product-info {
-			display: flex;
-			justify-content: space-evenly;
-			align-items: center;
-			gap: 20px;
-
-			img {
-				width: 200px;
-				height: 200px;
-				max-width: 100%;
-				border-radius: 50%;
-				object-fit: contain;
-				box-shadow: var(--boxShadow);
-			}
-			.product-info-details {
-				flex: 1;
-				.title {
-					width: fit-content;
-					margin: 0 auto 10px;
-					border-bottom: var(--border);
-					padding: 0 10px 10px;
-				}
-				.desc,
-				.price,
-				.category {
-					margin: 5px auto;
-					> div {
-						border: var(--border);
-						border-radius: 10px;
-						padding: 7px 10px;
-						margin-top: 5px;
-					}
-				}
-			}
-		}
-		.modal-options {
-			display: flex;
-			justify-content: space-evenly;
-			align-items: center;
-			gap: 10px;
-			button {
-				width: 180px;
-				border: none;
-				padding: 10px;
-				font-size: 17px;
-				color: var(--textColor);
-				border-radius: 4px;
-				transition: all 0.3s;
-				&:hover {
-					filter: brightness(1.2);
-				}
-			}
-			.close {
-				background-color: var(--mainColor);
-			}
-			.delete {
-				background-color: rgb(255, 39, 39);
-			}
-			.add {
-				background-color: rgb(63, 63, 228);
-			}
-		}
-	}
-}
-
-@media (max-width: 767px) {
-	.product-modal {
-		width: 80%;
-		.main-content {
-			justify-content: center;
-			gap: 10px;
-			.product-info {
-				flex-direction: column;
-				img {
-					width: 100px;
-					height: 100px;
-				}
-			}
-			.modal-options {
-				flex-direction: column;
-				justify-content: center;
-				gap: 5px;
 			}
 		}
 	}
