--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -1,12 +1,8 @@
 main {
 	grid-area: main;
-
 	.home {
 		display: flex;
 		gap: 30px;
-
-		.container {
-		}
 	}
 }
 
@@ -15,6 +11,223 @@ main {
 		.home {
 			flex-direction: column;
 			.container {
+			}
+		}
+	}
+}
+
+.product-modal {
+	.close-icon {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		border: 1px solid #c0c0c0;
+		border-radius: 4px;
+		padding: 0 10px;
+		color: var(--mainColor);
+		font-size: 17px;
+		font-weight: bold;
+		cursor: pointer;
+	}
+	.main-content {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		gap: 50px;
+
+		.product-info {
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			gap: 20px;
+
+			img {
+				width: 200px;
+				height: 200px;
+				max-width: 100%;
+				border-radius: 50%;
+				object-fit: contain;
+				box-shadow: var(--boxShadow);
+			}
+			.product-info-details {
+				flex: 1;
+				.title {
+					width: fit-content;
+					margin: 0 auto 10px;
+					border-bottom: var(--border);
+					padding: 0 10px 10px;
+				}
+				.desc,
+				.price,
+				.category {
+					margin: 5px auto;
+					> div {
+						border: var(--border);
+						border-radius: 10px;
+						padding: 7px 10px;
+						margin-top: 5px;
+					}
+				}
+				.sizes,
+				.colors {
+					margin: 10px auto;
+					display: flex;
+					// justify-content: center;
+					align-items: center;
+					flex-wrap: wrap;
+					gap: 5px;
+					span {
+						padding: 5px 15px;
+						text-transform: uppercase;
+						border: var(--border);
+					}
+				}
+				.colors .color-item {
+					width: 40px;
+					height: 40px;
+					border-radius: 50%;
+					display: inline;
+				}
+			}
+		}
+		.modal-options {
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			gap: 10px;
+			button {
+				width: 180px;
+				border: none;
+				padding: 10px;
+				font-size: 17px;
+				color: var(--textColor);
+				border-radius: 4px;
+				transition: all 0.3s;
+				&:hover {
+					filter: brightness(1.2);
+				}
+			}
+			.close {
+				background-color: var(--mainColor);
+			}
+			.delete {
+				background-color: rgb(255, 39, 39);
+			}
+			.add {
+				background-color: rgb(63, 63, 228);
+			}
+		}
+	}
+}
+
+@media (max-width: 767px) {
+	.product-modal {
+		width: 80%;
+		.main-content {
+			justify-content: center;
+			gap: 10px;
+			.product-info {
+				flex-direction: column;
+				img {
+					width: 100px;
+					height: 100px;
+				}
+			}
+			.modal-options {
+				flex-direction: column;
+				justify-content: center;
+				gap: 5px;
+			}
+		}
+	}
+}
+
+.select-size-color-modal {
+	width: 500px;
+	.main-box {
+		.heading {
+			border: 1px solid var(--redColor);
+			padding: 5px;
+			color: var(--textSecondColor);
+			border-radius: 10px;
+			width: fit-content;
+			margin: 0 auto 20px;
+		}
+		> div {
+			margin: 10px auto;
+		}
+		.sizes-content,
+		.colors-content {
+			display: flex;
+			align-items: center;
+			gap: 10px;
+			flex-wrap: wrap;
+			margin-top: 10px;
+			.size-item {
+				border: var(--border);
+				padding: 5px 10px;
+				cursor: pointer;
+				&.active {
+					background-color: var(--redColor);
+					color: var(--textColor);
+					border: none;
+				}
+			}
+			.color-item {
+				width: 40px;
+				height: 40px;
+				border: var(--border);
+				border-radius: 50%;
+				cursor: pointer;
+				&.active {
+					outline: 2px solid var(--mainColor);
+				}
+			}
+		}
+		.chosen-size-color {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			gap: 5px;
+			div {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				border: var(--border);
+				padding: 5px 10px;
+				span {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					padding: 10px;
+					height: 40px;
+					width: 40px;
+					&.chosen-color {
+						border-radius: 50%;
+						margin-left: 5px;
+						border: var(--border);
+					}
+				}
+			}
+		}
+		.options {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			gap: 10px;
+			button {
+				border: none;
+				padding: 10px;
+				border-radius: 10px;
+				&.submit {
+					background-color: var(--redColor);
+					color: var(--textColor);
+				}
+				&.cancel {
+					background-color: var(--bodyColor);
+					border: 1px solid var(--redColor);
+					color: var(--textSecondColor);
+				}
 			}
 		}
 	}
